@@ -32,6 +32,7 @@
     all actions in the subtoolbar.
 22. Look for 'playControl' action in SlimBrowse response and, if have more than
     2 audio items, use this for add/play all actions.
+23. Remove android lock screen and notification controls.
 
 1.8.9
 -----
